--- a/Projeto/style.css
+++ b/Projeto/style.css
@@ -4,13 +4,12 @@
   font-family: arial;
 }
 body {
-  background-image: url(Earth.jpg);
+  background-image: url(./Fotos/Earth.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed; /* Garante que a imagem não role com a página */
-  min-height: 100vh; /* Faz o body ocupar no mínimo 100% da altura da tela */
-  /* As 3 linhas abaixo centralizam o .container na página */
+  background-attachment: fixed; 
+  min-height: 100vh; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,6 +59,7 @@ background-color: white;
   background-color: #94c1f5;
   opacity: 0.9;
   color: white;
+  font-size: 30px;
 }
 #email:hover {
   color: #94c1f5;
